bug -fixed : center button alignment

--- a/assets/styles/icstyle.css
+++ b/assets/styles/icstyle.css
@@ -101,9 +101,13 @@ div.brand {
 }
 
 .btn-cn {
-    width: 50%;
+    width: auto;
     font-size: 14px;
-    margin-left: 20%;
+    
+}
+.fa-btn{
+    display: flex; 
+    justify-content: center;
 }
 
 .m-icon {
